# python_study

./: .gitignore  README.md  pyproject.toml  sources.example.json
src/litepy/: cli.py  feeds.py  store.py
