[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "litepy"
version = "0.1.0"
description = "轻量级实用 Python 项目模板与示例 CLI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["cli", "utility", "lightweight", "template"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com/repo"

[project.scripts]
litepy = "litepy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["litepy*"]
